# oidc-lint

./: Makefile  README.md  pyproject.toml  requirements.txt
examples/: targets.txt
oidc_lint/: checks_oidc.py  checks_passkey.py  cli.py  net.py
scripts/: run.sh
